# whimsy

./: .gitignore  Cargo.toml  config.toml
.github/: dependabot.yml
data/: addresses.csv  addresses.data  addresses.qmd  post.md  post1.md
src/: addresses.rs  identifier.rs  lib.rs  main.rs  observer.rs  parcels.rs  run.rs  run_ui.rs  tab.rs  table.rs  utils.rs
src/address_components/: street_name_pre_directional.rs  subaddress_type.rs
src/controls/: act.rs  command.rs  focus.rs  mod.rs
src/rpg/: character.rs  mod.rs  movement.rs
src/rpg/players/: eponym.rs  mod.rs  paeva.rs  tab.rs
src/state/: egui_state.rs  eponym.rs  lens.rs  mod.rs
tests/: test.rs
