[package]
name = "whimsy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "whimsy"

[dependencies]
address = { git = "https://github.com/grantspassoregon/address.git" }
bincode = "1.3.3"
bitflags = "2.5.0"
csv = "1.3.0"
derive_more = "0.99.17"
egui = "0.28.1"
egui-notify = "0.15.0"
egui-wgpu = "0.28.1"
egui-winit = "0.28.1"
egui_dock = { version = "0.13.0", features = ["serde"] }
egui_extras = "0.28.1"
galileo = { git = "https://github.com/Maximkaaa/galileo" }
galileo-types = { git = "https://github.com/Maximkaaa/galileo" }
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
geozero = "0.13.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
names = "0.14.0"
nom = "7.1.3"
num-traits = "0.2.18"
polite = { git = "https://github.com/crumplecup/cordial", default-features = false, features = ["bin", "gis", "parse", "win"] }
proj = "0.27.2"
rayon = "1.10.0"
serde = { version = "1.0.197", features = ["derive"] }
shapefile = "0.6.0"
# spreadsheet = { git = "https://github.com/grantspassoregon/spreadsheet.git" }
strum = { version = "0.26.2", features = ["strum_macros", "derive"] }
strum_macros = "0.26.2"
tokio = { version = "1.36.0", features = ["tokio-macros", "full"] }
toml = "0.8.12"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.8.0", features = ["serde", "v4"] }
wgpu = "0.19.4"
winit = { version = "0.30.4", features = ["serde"]}
