[package]
name = "whimsy"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "whimsy"

[dependencies]
address = { git = "https://github.com/grantspassoregon/address.git" }
bincode = "1.3.3"
bitflags = "2.6.0"
csv = "1.3.0"
derive_more = "0.99.18"
egui = "0.27.2"
egui-notify = "0.14.0"
egui-wgpu = "0.27.2"
egui-winit = "0.27.2"
egui_dock = { version = "0.12.0", features = ["serde"] }
egui_extras = "0.27.2"
galileo = { git = "https://github.com/Maximkaaa/galileo" }
galileo-types = { git = "https://github.com/Maximkaaa/galileo" }
geo = "0.28.0"
geo-types = "0.7.13"
geojson = "0.24.1"
geozero = "0.13.0"
indicatif = { version = "0.17.8", features = ["rayon"] }
itertools = "0.13.0"
names = "0.14.0"
nom = "7.1.3"
num-traits = "0.2.19"
polite = { git = "https://github.com/crumplecup/cordial", default-features = false, features = [
  "bin",
  "gis",
  "parse",
  "win",
] }
proj = "0.27.2"
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
shapefile = "0.6.0"
# spreadsheet = { git = "https://github.com/grantspassoregon/spreadsheet.git" }
strum = { version = "0.26.3", features = ["strum_macros", "derive"] }
strum_macros = "0.26.4"
tokio = { version = "1.39.2", features = ["tokio-macros", "full"] }
toml = "0.8.16"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }
wgpu = "0.19.4"
winit = { version = "0.29.15", features = ["serde"] }
